Finished website. Have to add pictures

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://vjc9duke.github.io",
-  "name": "vincentefolio",
+  "homepage": "https://rg288.github.io",
+  "name": "Raul_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
