--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rg288.github.io",
+  "homepage": "https://raulgalvezjr.com",
   "name": "Raul_portfolio",
   "version": "0.1.0",
   "private": true,
