--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RaulGalvez88.github.io",
+  "homepage": "https://RaulGalvez288.github.io",
   "name": "Raul_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -25,7 +25,7 @@
     "predeploy": "npm run build",
     "start": "node fetch.js && react-scripts start",
     "build": "node fetch.js && react-scripts build",
-    "deploy": "gh-pages -d build --branch gh-pages --force",
+    "deploy": "gh-pages -d build -f",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
